@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.25 2004/12/19 00:01:43 jlam Exp $
+# $NetBSD: Makefile,v 1.26 2004/12/20 11:31:03 grant Exp $
 
-DISTNAME=	GD-2.16
+DISTNAME=	GD-2.19
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	2
 SVR4_PKGNAME=	p5bd
 CATEGORIES=	graphics perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=GD/}
@@ -12,6 +11,8 @@ HOMEPAGE=	http://theory.uwinnipeg.ca/CPAN/data/GD/GD.html
 COMMENT=	Perl5 interface to gd graphics library
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
+
+BUILDLINK_DEPENDS.gd+=	gd>=2.0.28
 
 USE_BUILDLINK3=		YES
 PERL5_PACKLIST=		${PERL5_SITEARCH}/auto/GD/.packlist
