@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.8 2004/07/07 16:51:26 xtraeme Exp $
+$NetBSD: distinfo,v 1.9 2004/08/05 04:32:50 jlam Exp $
 
-SHA1 (GD-2.16.tar.gz) = 898f910f69ceac95cc0cdd62b0cb3d4833662c58
-Size (GD-2.16.tar.gz) = 157025 bytes
+SHA1 (GD-2.19.tar.gz) = af79930e0c5588ac3a1cdfb731f7650e15356b1f
+Size (GD-2.19.tar.gz) = 175717 bytes
